# edugraph-ontology

./: .gitignore  AGENTS.md  DESIGN.md  DOCS.md  DOCS_ONTOLOGY.md  Dockerfile  README.md  catalog-v001.xml  core-abilities.ttl  core-areas-math.ttl  core-instances.ttl  core-ontology-math.rdf  core-ontology.ttl  core-schema.ttl  core-scopes-math.ttl  pyproject.toml
.github/workflows/: pre-release.yml  release.yml
libraries/python/: README.md  pyproject.toml  test_relations.py
libraries/typescript/: README.md  package.json  test.ts  tsconfig.json
src/ontology/: generate-py.py  generate-ts.py
